# komga-discord

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yaml
config/: default.toml
helm/komga-discord/: Chart.yaml  values.yaml
src/: main.rs  settings.rs
templates/komga/: recently_added.html.hbs
