[package]
name = "komga-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
base64 = "0.21.6"
chrono = "0.4.31"
config = "0.13.4"
handlebars = "5.0.0"
komga = "1.9.2"
reqwest = "0.11.4"
rocket = "0.5.0"
serenity = { version = "0.12.0" , features = ["cache", "framework", "http", "unstable_discord_api"] }
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.9.4"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
env_logger = "0.10.1"
